force-app/main/default/objects/Change_Control_Tracker__c/Change_Control_Tracker__c.object-meta.xml
<CustomObject>
    <label>Change Control Tracker</label>
    <nameField>
        <displayFormat>CCT-{000000}</displayFormat>
        <label>Change Control Tracker No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Control Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>