force-app/main/default/objects/Change_Control_Tracker__c/fields/Change_Control_Request_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Change_Control_Request_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Control Request Line Item</label>
    <referenceTo>Change_Control_Request_Line_Item__c</referenceTo>
    <relationshipLabel>Change Control Trackers</relationshipLabel>
    <relationshipName>Change_Control_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>