force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_AA_3_Years_Guidance_Met__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_AA_3_Years_Guidance_Met__c</fullName>
    <formula>IF(AND( Co_funding_AA_3_Years_Percent__c &lt;= 0.15, Co_funding_AA_3_Years_Percent__c &gt;= 0.0), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding AA 5 Years - Guidance Met?</label>
    <type>Text</type>
</CustomField>