force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_AA_3_Years_Request_Original__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_AA_3_Years_Request_Original__c</fullName>
    <formula>(Original_Award_Project_Baseline__r.Baseline_Co_funding_A_A_spend__c - Cofunding_AA_3_Years__c) / Original_Award_Project_Baseline__r.Baseline_Co_funding_A_A_spend__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding AA 5 Years - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>