force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Capital_5_Years__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Capital_5_Years__c</fullName>
    <label>Co-funding Capital 5 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>