force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Capital_5_Years_Request_Orig__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Capital_5_Years_Request_Orig__c</fullName>
    <formula>(Original_Award_Project_Baseline__r.Baseline_Co_Funding_Capital_Spend__c - Co_funding_Capital_5_Years__c) / Original_Award_Project_Baseline__r.Baseline_Co_Funding_Capital_Spend__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Capital 5 Years Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>