force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Capital_5_Years_Variance__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Capital_5_Years_Variance__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
(Co_funding_Capital_5_Years__c - Original_Award_Project_Baseline__r.Baseline_Co_Funding_Capital_Spend__c),
(Co_funding_Capital_5_Years__c - Current_Award_Baseline__r.Baseline_Co_Funding_Capital_Spend__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Capital 5 Years Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>