force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Total_24_25_Request_Original__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_24_25_Request_Original__c</fullName>
    <formula>(Original_Award_Project_Baseline__r.Co_Funding_Spend_24_25__c - Cofunding_Total_2425__c ) / Original_Award_Project_Baseline__r.Co_Funding_Spend_24_25__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Total 24/25 - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>