force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Total_25_26_Request__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_25_26_Request__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
( Original_Award_Project_Baseline__r.Co_Funding_Spend_25_26__c - Cofunding_Total_2526__c ) / Original_Award_Project_Baseline__r.Co_Funding_Spend_25_26__c * -1,
(Current_Award_Baseline__r.Co_Funding_Spend_25_26__c - Cofunding_Total_2526__c) / Current_Award_Baseline__r.Co_Funding_Spend_25_26__c * -1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Total 25/26 - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>