force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Total_26_27_Variance__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_26_27_Variance__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
(Cofunding_Total_2627__c -  Original_Award_Project_Baseline__r.Co_Funding_Spend_26_27__c ),
(Cofunding_Total_2627__c - Current_Award_Baseline__r.Co_Funding_Spend_26_27__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Total 26/27 - Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>