force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Total_3_Years_Guidance_Met__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_3_Years_Guidance_Met__c</fullName>
    <formula>IF( Co_funding_Total_3_Years_Percent__c = 0.50, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Co-funding Total 5 Years 50%</inlineHelpText>
    <label>Co-funding Total 5 Years - Guidance Met?</label>
    <type>Text</type>
</CustomField>