force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Total_3_Years_Percent__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_3_Years_Percent__c</fullName>
    <formula>Cofunding_Total_3_Years__c /  Total_Spend_Minus_LCH_On_Gas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Total 5 Years %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>