force-app/main/default/objects/Change_Control_Tracker__c/fields/Co_funding_Total_3_Years_Request_Origina__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Total_3_Years_Request_Origina__c</fullName>
    <formula>( Original_Award_Project_Baseline__r.Baseline_Total_Co_Funding_Spend__c - Cofunding_Total_3_Years__c ) / Original_Award_Project_Baseline__r.Baseline_Total_Co_Funding_Spend__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-funding Total 5 Years - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>