force-app/main/default/objects/Change_Control_Tracker__c/fields/Cost_Cap_Exc_LCH_On_Gas__c.field-meta.xml
<CustomField>
    <fullName>Cost_Cap_Exc_LCH_On_Gas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost Cap Exc LCH On Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>