force-app/main/default/objects/Change_Control_Tracker__c/fields/Cost_Cap_Exc_LCH_On_Gas_Request__c.field-meta.xml
<CustomField>
    <fullName>Cost_Cap_Exc_LCH_On_Gas_Request__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
(Original_Award_Project_Baseline__r.Baseline_Total_Grant_Spend__c - (Original_Award_Project_Baseline__r.Total_Homes_to_be_Upgraded__c * 7500)) -  Cost_Cap_Exc_LCH_On_Gas__c / (Original_Award_Project_Baseline__r.Baseline_Total_Grant_Spend__c - (Original_Award_Project_Baseline__r.Total_Homes_to_be_Upgraded__c * 7500)) * -1,


( Current_Award_Baseline__r.Baseline_Total_Grant_Spend__c  - ( Current_Award_Baseline__r.Total_Homes_to_be_Upgraded__c  * 7500)) -  Cost_Cap_Exc_LCH_On_Gas__c / (Current_Award_Baseline__r.Baseline_Total_Grant_Spend__c) - (Current_Award_Baseline__r.Total_Homes_to_be_Upgraded__c * 7500)) * -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Cap Exc LCH On Gas - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>