force-app/main/default/objects/Change_Control_Tracker__c/fields/Current_Award_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Current_Award_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Award Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Change Control Trackers (Current Project Baseline)</relationshipLabel>
    <relationshipName>Change_Control_Trackers1</relationshipName>
    <type>Lookup</type>
</CustomField>