force-app/main/default/objects/Change_Control_Tracker__c/fields/Current_or_Historic_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Current_or_Historic_Baseline__c</fullName>
    <formula>IF( ISPICKVAL(Current_Award_Baseline__r.Status__c, &quot;Active&quot;), &quot;Current&quot;, &quot;Historic&quot;)</formula>
    <label>Current or Historic Baseline?</label>
    <type>Text</type>
</CustomField>