force-app/main/default/objects/Change_Control_Tracker__c/fields/Ending_EPC_C_or_Above__c.field-meta.xml
<CustomField>
    <fullName>Ending_EPC_C_or_Above__c</fullName>
    <label>Ending EPC C or Above</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>