force-app/main/default/objects/Change_Control_Tracker__c/fields/Ending_EPC_D_or_Below__c.field-meta.xml
<CustomField>
    <fullName>Ending_EPC_D_or_Below__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ending EPC D or Below</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>