force-app/main/default/objects/Change_Control_Tracker__c/fields/Ending_EPC_D_or_Below_Percent__c.field-meta.xml
<CustomField>
    <fullName>Ending_EPC_D_or_Below_Percent__c</fullName>
    <formula>Ending_EPC_D_or_Below__c /  Total_Project_Homes_Treated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ending EPC D or Below %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>