force-app/main/default/objects/Change_Control_Tracker__c/fields/Ending_EPC_D_or_Below_Request__c.field-meta.xml
<CustomField>
    <fullName>Ending_EPC_D_or_Below_Request__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ending EPC D or Below - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>