force-app/main/default/objects/Change_Control_Tracker__c/fields/Ending_EPC_D_or_Below_Request_Orig__c.field-meta.xml
<CustomField>
    <fullName>Ending_EPC_D_or_Below_Request_Orig__c</fullName>
    <formula>( Parent_Change_Control_Tracker__r.Ending_EPC_D_or_Below__c  -  Ending_EPC_D_or_Below__c ) / Parent_Change_Control_Tracker__r.Ending_EPC_D_or_Below__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ending EPC D or Below - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>