force-app/main/default/objects/Change_Control_Tracker__c/fields/Energy_Demand__c.field-meta.xml
<CustomField>
    <fullName>Energy_Demand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Energy Demand</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>