force-app/main/default/objects/Change_Control_Tracker__c/fields/Energy_Demand_Request__c.field-meta.xml
<CustomField>
    <fullName>Energy_Demand_Request__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Energy Demand - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>