force-app/main/default/objects/Change_Control_Tracker__c/fields/Energy_Demand_Request_Original__c.field-meta.xml
<CustomField>
    <fullName>Energy_Demand_Request_Original__c</fullName>
    <formula>(  Parent_Change_Control_Tracker__r.Energy_Demand__c  -  Energy_Demand__c  ) / Parent_Change_Control_Tracker__r.Energy_Demand__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Demand - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>