force-app/main/default/objects/Change_Control_Tracker__c/fields/Fuel_Savings__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Savings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fuel Savings</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>