force-app/main/default/objects/Change_Control_Tracker__c/fields/Fuel_Savings_Request__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Savings_Request__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fuel Savings - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>