force-app/main/default/objects/Change_Control_Tracker__c/fields/Fuel_Savings_Request_Original__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Savings_Request_Original__c</fullName>
    <formula>(  Parent_Change_Control_Tracker__r.Fuel_Savings__c  -  Fuel_Savings__c  ) / Parent_Change_Control_Tracker__r.Fuel_Savings__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel Savings - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>