force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_AA_3_Years__c.field-meta.xml
<CustomField>
    <fullName>Grant_AA_3_Years__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grant AA 3 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>