force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_AA_3_Years_Guidance_Met__c.field-meta.xml
<CustomField>
    <fullName>Grant_AA_3_Years_Guidance_Met__c</fullName>
    <formula>IF(AND( Grant_AA_3_Years_Percent__c  &lt;= 0.15, Grant_AA_3_Years_Percent__c &gt;= 0.0), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Grant AA 3 Years 15% or under?</inlineHelpText>
    <label>Grant AA 3 Years - Guidance Met?</label>
    <type>Text</type>
</CustomField>