force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_AA_3_Years_Variance__c.field-meta.xml
<CustomField>
    <fullName>Grant_AA_3_Years_Variance__c</fullName>
    <formula>IF(Parent_Change_Control_Tracker__c = &quot;&quot;, 0,
IF(Pending_Change_Control_Request__c = &quot;&quot;,
(Grant_AA_3_Years__c  -  Original_Award_Project_Baseline__r.Baseline_Grant_A_A_Spend__c ),
(Grant_AA_3_Years__c  - Current_Award_Baseline__r.Baseline_Grant_A_A_Spend__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant AA 3 Years - Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>