force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Cap_3_Years_Exc_On_Gas_Request_Ori__c.field-meta.xml
<CustomField>
    <fullName>Grant_Cap_3_Years_Exc_On_Gas_Request_Ori__c</fullName>
    <formula>((Original_Award_Project_Baseline__r.Baseline_Grant_Capital_Spend__c - Original_Award_Project_Baseline__r.Maximum_grant_funded_costs_on_LCH_homes__c) - Grant_Capital_3_Years_Exc_On_Gas__c ) / (Original_Award_Project_Baseline__r.Baseline_Grant_Capital_Spend__c - Original_Award_Project_Baseline__r.Maximum_grant_funded_costs_on_LCH_homes__c) * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Cap 3 Years Exc On Gas - Request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>