force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Capital_3_Years_Exc_On_Gas__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capital_3_Years_Exc_On_Gas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grant Capital 3 Years Exc On Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>