force-app/main/default/objects/Change_Control_Tracker__c/fields/Grant_Capital_3_Years_Exc_On_Gas_Met__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capital_3_Years_Exc_On_Gas_Met__c</fullName>
    <formula>IF(Grant_Capital_3_Years_Exc_On_Gas_Percent__c  &lt;= 1.0, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Grant Capital 3 Years Exc On Gas 100% or under?</inlineHelpText>
    <label>Grant Capital 3 Years Exc On Gas - Met?</label>
    <type>Text</type>
</CustomField>